Boolean() usage
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@323613 13f79535-47bb-0310-9956-ffa450edef68